Improved documentation links
Same as before

--- a/Doxygen Documentation/latex/classThoughts_1_1Game_1_1Attributes_1_1AttributeManager.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1Game_1_1Attributes_1_1AttributeManager.tex
@@ -117,8 +117,7 @@ Here is the call graph for this function\+:\nopagebreak
 \includegraphics[width=350pt]{classThoughts_1_1Game_1_1Attributes_1_1AttributeManager_a26d41e83e61d212125233cc28b9c069f_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
