--- a/Doxygen Documentation/latex/classThoughts_1_1Game_1_1Attributes_1_1OwnedAttribute.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1Game_1_1Attributes_1_1OwnedAttribute.tex
@@ -76,8 +76,7 @@ Definition at line 28 of file Owned\+Attribute.\+cs.
 
 Definition at line 41 of file Owned\+Attribute.\+cs.
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
