--- a/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameManager.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameManager.tex
@@ -16,7 +16,8 @@ Inheritance diagram for Thoughts.\+Game.\+Game\+Manager\+:\nopagebreak
 \end{figure}
 
 
-Collaboration diagram for Thoughts.\+Game.\+Game\+Manager\+:\nopagebreak
+Collaboration diagram for Thoughts.\+Game.\+Game\+Manager\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -72,15 +73,15 @@ Recursively look for all Map\+Events available in the game\textquotesingle{}s ma
 \hline
 {\em value\+To\+Cover} & The amount of value needed to be covered (increased).\\
 \hline
-{\em executer} & Map element that is going to execute the \char`\"{}execution plans\char`\"{}.\\
+{\em executer} & Map element that is going to execute the list of Execution\+Plans.\\
 \hline
-{\em map\+Events\+To\+Execute} & Execution plans wanted to be executed previously to the ones to cover the \char`\"{}attribute\+To\+Cover\char`\"{}.\\
+{\em map\+Events\+To\+Execute} & Execution plans wanted to be executed previously to the ones to cover the attribute\+To\+Cover.\\
 \hline
 {\em iteration} & The iteration number of the this method\textquotesingle{}s recursive execution. Should start as 0.\\
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-An ordered list of the Execution Plans needed to achieve the goal (to increase the value of the \char`\"{}attribute\+To\+Cover\char`\"{} by \char`\"{}value\+To\+Cover\char`\"{})
+An ordered list of the Execution Plans needed to achieve the goal (to increase the value of the attribute\+To\+Cover by value\+To\+Cover)
 \end{DoxyReturn}
 
 
@@ -107,14 +108,16 @@ Starts a new game by setting up the participants and generating a new world.
 
 Definition at line 42 of file Game\+Manager.\+cs.
 
-Here is the call graph for this function\+:\nopagebreak
+Here is the call graph for this function\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{classThoughts_1_1Game_1_1GameManager_a8d515fc1b62a4b466a2247ed1f6cee46_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:\nopagebreak
+Here is the caller graph for this function\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
