--- a/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameMap_1_1Map.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameMap_1_1Map.tex
@@ -7,7 +7,8 @@ The map of the game.
 
 
 
-Inheritance diagram for Thoughts.\+Game.\+Game\+Map.\+Map\+:\nopagebreak
+Inheritance diagram for Thoughts.\+Game.\+Game\+Map.\+Map\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -16,7 +17,8 @@ Inheritance diagram for Thoughts.\+Game.\+Game\+Map.\+Map\+:\nopagebreak
 \end{figure}
 
 
-Collaboration diagram for Thoughts.\+Game.\+Game\+Map.\+Map\+:\nopagebreak
+Collaboration diagram for Thoughts.\+Game.\+Game\+Map.\+Map\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -36,13 +38,13 @@ void \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1Map_a8b25dde9de166fede
 \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1MapElement}{Map\+Element}} \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1Map_aedcb62dc3659bb4dee190fac3ed061ca}{Spawn\+Map\+Element}} (Game\+Object spawnable\+Game\+Object, Vector3 position, Quaternion rotation)
 \begin{DoxyCompactList}\small\item\em Makes a map element spawn. \end{DoxyCompactList}\item 
 Game\+Object \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1Map_a4a90ffe0fdc67821244b6c4989cec8ab}{Get\+Spawnable\+Game\+Object}} (string name)
-\begin{DoxyCompactList}\small\item\em Obtains the Game\+Object with the given name from the \char`\"{}spawnable\+Map\+Element\char`\"{} list. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Obtains the Game\+Object with the given name from the spawnable\+Map\+Element list. \end{DoxyCompactList}\item 
 List$<$ \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1MapElement}{Map\+Element}} $>$ \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1Map_a76b9b13bed3b4bb6ef14c7aa16502307}{Generate\+Map\+Elements}} ()
 \begin{DoxyCompactList}\small\item\em Generates Map\+Elements in the map (not mobs). \end{DoxyCompactList}\item 
 List$<$ \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1MapElement}{Map\+Element}} $>$ \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1Map_a4244c867225274151d92f26abc3a0f58}{Spawn\+Random}} (string prefab\+Name, int quantity, Random\+Essentials random)
 \begin{DoxyCompactList}\small\item\em Randomly generates the \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1MapElement}{Map\+Element}} with the given name a determined amount of times. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1Map_ad567ecac23ffda9dca0fdd7d7c1406be}{Setup\+New\+Nav\+Meshes}} ()
-\begin{DoxyCompactList}\small\item\em Sets up the Nav\+Mesh for all the Nav\+Mesh\+Agents in the \char`\"{}spawnable\+Map\+Element\char`\"{} list. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Sets up the Nav\+Mesh for all the Nav\+Mesh\+Agents in the spawnable\+Map\+Element list. \end{DoxyCompactList}\item 
 List$<$ \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1MapElement}{Map\+Element}} $>$ \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1Map_a542cec4f7f8e4b3923c54bc7edbe30a3}{Generate\+Mobs}} ()
 \begin{DoxyCompactList}\small\item\em Generates Mobs in the map. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Private Attributes}
@@ -50,7 +52,7 @@ List$<$ \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1MapElement}{Map\+El
 \item 
 List$<$ \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1MapElement}{Map\+Element}} $>$ \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1Map_a5d24ead577586e2bb2d37f400f5aa559}{map\+Elements}} = new List$<$\mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1MapElement}{Map\+Element}}$>$()
 \begin{DoxyCompactList}\small\item\em All the map elements present in the map. \end{DoxyCompactList}\item 
-List$<$ Game\+Object $>$ \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1Map_a0b232ee898cc3b6b14b0320fc488a212}{spawnable\+Map\+Element}}
+List$<$ Game\+Object $>$ \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1Map_ac80495929ac85dd2e423e244ddca9bbe}{spawnable\+Map\+Elements}}
 \begin{DoxyCompactList}\small\item\em All the map elements\textquotesingle{} prefabs that can be spawned in the map. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
@@ -81,14 +83,16 @@ A list of the generated map elements.
 
 Definition at line 76 of file Map.\+cs.
 
-Here is the call graph for this function\+:\nopagebreak
+Here is the call graph for this function\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{classThoughts_1_1Game_1_1GameMap_1_1Map_a76b9b13bed3b4bb6ef14c7aa16502307_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:\nopagebreak
+Here is the caller graph for this function\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -112,14 +116,16 @@ A list of the generated map elements (mobs).
 
 Definition at line 146 of file Map.\+cs.
 
-Here is the call graph for this function\+:\nopagebreak
+Here is the call graph for this function\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{classThoughts_1_1Game_1_1GameMap_1_1Map_a542cec4f7f8e4b3923c54bc7edbe30a3_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:\nopagebreak
+Here is the caller graph for this function\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -145,14 +151,16 @@ Generates a new map.
 
 Definition at line 33 of file Map.\+cs.
 
-Here is the call graph for this function\+:\nopagebreak
+Here is the call graph for this function\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{classThoughts_1_1Game_1_1GameMap_1_1Map_a8b25dde9de166fedec8979eb0c3558d7_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:\nopagebreak
+Here is the caller graph for this function\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -175,11 +183,11 @@ Look for all Map\+Events available in the map that, as consequence of the event,
 \hline
 {\em value\+To\+Cover} & The amount of value needed to be covered (increased).\\
 \hline
-{\em executer} & \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1Map}{Map}} element that is going to execute the \char`\"{}execution plans\char`\"{}.\\
+{\em executer} & \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1Map}{Map}} element that is going to execute the \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1ExecutionPlan}{Execution\+Plan}}.\\
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-The Execution Plan needed to achieve the goal (to increase the value of the \char`\"{}attribute\+To\+Cover\char`\"{} by \char`\"{}value\+To\+Cover\char`\"{})
+The Execution Plan needed to achieve the goal (to increase the value of the attribute\+To\+Cover by value\+To\+Cover)
 \end{DoxyReturn}
 
 
@@ -207,7 +215,7 @@ Here is the caller graph for this function\+:\nopagebreak
 
 
 
-Obtains the Game\+Object with the given name from the \char`\"{}spawnable\+Map\+Element\char`\"{} list. 
+Obtains the Game\+Object with the given name from the spawnable\+Map\+Element list. 
 
 
 \begin{DoxyParams}{Parameters}
@@ -215,13 +223,14 @@ Obtains the Game\+Object with the given name from the \char`\"{}spawnable\+Map\+
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-The Game\+Object with a matching name from inside the \char`\"{}spawnable\+Map\+Element\char`\"{} list. Null if no object is found with the given name in the list.
+The Game\+Object with a matching name from inside the spawnable\+Map\+Elements list. Null if no object is found with the given name in the list.
 \end{DoxyReturn}
 
 
 Definition at line 59 of file Map.\+cs.
 
-Here is the caller graph for this function\+:\nopagebreak
+Here is the caller graph for this function\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -236,13 +245,14 @@ Here is the caller graph for this function\+:\nopagebreak
 
 
 
-Sets up the Nav\+Mesh for all the Nav\+Mesh\+Agents in the \char`\"{}spawnable\+Map\+Element\char`\"{} list. 
+Sets up the Nav\+Mesh for all the Nav\+Mesh\+Agents in the spawnable\+Map\+Element list. 
 
 
 
 Definition at line 114 of file Map.\+cs.
 
-Here is the caller graph for this function\+:\nopagebreak
+Here is the caller graph for this function\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -275,7 +285,8 @@ Makes a map element spawn.
 
 Definition at line 48 of file Map.\+cs.
 
-Here is the caller graph for this function\+:\nopagebreak
+Here is the caller graph for this function\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -292,7 +303,7 @@ Here is the caller graph for this function\+:\nopagebreak
 
 Randomly generates the \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1MapElement}{Map\+Element}} with the given name a determined amount of times. 
 
-The \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1MapElement}{Map\+Element}}\textquotesingle{}s prefab is obtained from the \char`\"{}spawnable\+Map\+Element\char`\"{} list.
+The \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1MapElement}{Map\+Element}}\textquotesingle{}s prefab is obtained from the spawnable\+Map\+Element list.
 
 
 \begin{DoxyParams}{Parameters}
@@ -310,14 +321,16 @@ The \mbox{\hyperlink{classThoughts_1_1Game_1_1GameMap_1_1MapElement}{Map\+Elemen
 
 Definition at line 98 of file Map.\+cs.
 
-Here is the call graph for this function\+:\nopagebreak
+Here is the call graph for this function\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{classThoughts_1_1Game_1_1GameMap_1_1Map_a4244c867225274151d92f26abc3a0f58_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:\nopagebreak
+Here is the caller graph for this function\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -341,11 +354,11 @@ All the map elements present in the map.
 
 Definition at line 20 of file Map.\+cs.
 
-\mbox{\Hypertarget{classThoughts_1_1Game_1_1GameMap_1_1Map_a0b232ee898cc3b6b14b0320fc488a212}\label{classThoughts_1_1Game_1_1GameMap_1_1Map_a0b232ee898cc3b6b14b0320fc488a212}} 
-\index{Thoughts.Game.GameMap.Map@{Thoughts.Game.GameMap.Map}!spawnableMapElement@{spawnableMapElement}}
-\index{spawnableMapElement@{spawnableMapElement}!Thoughts.Game.GameMap.Map@{Thoughts.Game.GameMap.Map}}
-\doxysubsubsection{\texorpdfstring{spawnableMapElement}{spawnableMapElement}}
-{\footnotesize\ttfamily List$<$Game\+Object$>$ Thoughts.\+Game.\+Game\+Map.\+Map.\+spawnable\+Map\+Element\hspace{0.3cm}{\ttfamily [private]}}
+\mbox{\Hypertarget{classThoughts_1_1Game_1_1GameMap_1_1Map_ac80495929ac85dd2e423e244ddca9bbe}\label{classThoughts_1_1Game_1_1GameMap_1_1Map_ac80495929ac85dd2e423e244ddca9bbe}} 
+\index{Thoughts.Game.GameMap.Map@{Thoughts.Game.GameMap.Map}!spawnableMapElements@{spawnableMapElements}}
+\index{spawnableMapElements@{spawnableMapElements}!Thoughts.Game.GameMap.Map@{Thoughts.Game.GameMap.Map}}
+\doxysubsubsection{\texorpdfstring{spawnableMapElements}{spawnableMapElements}}
+{\footnotesize\ttfamily List$<$Game\+Object$>$ Thoughts.\+Game.\+Game\+Map.\+Map.\+spawnable\+Map\+Elements\hspace{0.3cm}{\ttfamily [private]}}
 
 
 
