--- a/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameMap_1_1MapElement.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1Game_1_1GameMap_1_1MapElement.tex
@@ -124,16 +124,14 @@ True if the behaviour was expected (the planned event was executed successfully,
 
 Definition at line 169 of file Map\+Element.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{classThoughts_1_1Game_1_1GameMap_1_1MapElement_a12d0c94d46387b1b6d6438a18abe1ae1_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -159,8 +157,7 @@ Sets the destination of this object\textquotesingle{}s Nav\+Mesh\+Agent and resu
 
 Definition at line 220 of file Map\+Element.\+cs.
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -181,8 +178,7 @@ Starts the \char`\"{}\+Update\+Coroutine\char`\"{} coroutine.
 
 Definition at line 45 of file Map\+Element.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -213,8 +209,7 @@ Executes the map events with \char`\"{}execute with time elapse\char`\"{} enable
 
 Definition at line 67 of file Map\+Element.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -256,16 +251,14 @@ Sets the objective\+Attribute\+To\+Cover to the most needy attribute owned by th
 
 Definition at line 137 of file Map\+Element.\+cs.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{classThoughts_1_1Game_1_1GameMap_1_1MapElement_a29c70fa3beeb9e73f6e3870e8a7e6532_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
