--- a/Doxygen Documentation/latex/classThoughts_1_1AppManager.tex
+++ b/Doxygen Documentation/latex/classThoughts_1_1AppManager.tex
@@ -2,7 +2,7 @@
 \label{classThoughts_1_1AppManager}\index{Thoughts.AppManager@{Thoughts.AppManager}}
 
 
-Object that must be kept always alive while running the app. It initializes the game process and keeps track of the current \char`\"{}\+Game\+Manager\char`\"{}.  
+Object that must be kept always alive while running the app. It initializes the game process and keeps track of the current Game\+Manager.  
 
 
 
@@ -34,13 +34,13 @@ static \mbox{\hyperlink{classThoughts_1_1Game_1_1GameManager}{Game\+Manager}} \m
 \begin{DoxyCompactItemize}
 \item 
 void \mbox{\hyperlink{classThoughts_1_1AppManager_a4cdaadd22e5c3f4136991f02afe33298}{Awake}} ()
-\begin{DoxyCompactList}\small\item\em Tries to set up this \char`\"{}\+App\+Manager\char`\"{} as singleton instance. If possible, marks the Game\+Object containing this Mono\+Behaviour as \char`\"{}\+Dont\+Destroy\+On\+Load\char`\"{}. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Tries to set up this \mbox{\hyperlink{classThoughts_1_1AppManager}{App\+Manager}} as singleton instance. If possible, marks the Game\+Object containing this Mono\+Behaviour as Dont\+Destroy\+On\+Load. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classThoughts_1_1AppManager_a0bb22cc2b3cc5aa16c793157c0bef3b1}{Start}} ()
 \begin{DoxyCompactList}\small\item\em Triggers the start of a new game. \end{DoxyCompactList}\item 
 bool \mbox{\hyperlink{classThoughts_1_1AppManager_a0f1cf13d1debe8f7974e2e39ae621533}{Initialize\+Singleton}} ()
-\begin{DoxyCompactList}\small\item\em If there is no other instance of an \char`\"{}\+App\+Manager\char`\"{}, this is set as it. Being the only one following the \char`\"{}singleton\char`\"{} pattern. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em If there is no other instance of an \mbox{\hyperlink{classThoughts_1_1AppManager}{App\+Manager}}, this is set as it. Being the only one following the Singleton pattern. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classThoughts_1_1AppManager_aa6b4098e23afcb973848216e995e00ae}{Start\+New\+Game}} ()
-\begin{DoxyCompactList}\small\item\em Starts a new game by instantiating the Game\+Manager prefab and triggering its method \char`\"{}\+Start\+New\+Game\char`\"{} \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Starts a new game by instantiating the Game\+Manager prefab and triggering its method Start\+New\+Game. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Private Attributes}
 \begin{DoxyCompactItemize}
 \item 
@@ -49,7 +49,7 @@ Game\+Object \mbox{\hyperlink{classThoughts_1_1AppManager_a5a549870df0329b83ce69
 
 
 \doxysubsection{Detailed Description}
-Object that must be kept always alive while running the app. It initializes the game process and keeps track of the current \char`\"{}\+Game\+Manager\char`\"{}. 
+Object that must be kept always alive while running the app. It initializes the game process and keeps track of the current Game\+Manager. 
 
 
 
@@ -66,13 +66,14 @@ Definition at line 9 of file App\+Manager.\+cs.
 
 
 
-Tries to set up this \char`\"{}\+App\+Manager\char`\"{} as singleton instance. If possible, marks the Game\+Object containing this Mono\+Behaviour as \char`\"{}\+Dont\+Destroy\+On\+Load\char`\"{}. 
+Tries to set up this \mbox{\hyperlink{classThoughts_1_1AppManager}{App\+Manager}} as singleton instance. If possible, marks the Game\+Object containing this Mono\+Behaviour as Dont\+Destroy\+On\+Load. 
 
 
 
 Definition at line 29 of file App\+Manager.\+cs.
 
-Here is the call graph for this function\+:\nopagebreak
+Here is the call graph for this function\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -87,16 +88,17 @@ Here is the call graph for this function\+:\nopagebreak
 
 
 
-If there is no other instance of an \char`\"{}\+App\+Manager\char`\"{}, this is set as it. Being the only one following the \char`\"{}singleton\char`\"{} pattern. 
+If there is no other instance of an \mbox{\hyperlink{classThoughts_1_1AppManager}{App\+Manager}}, this is set as it. Being the only one following the Singleton pattern. 
 
 \begin{DoxyReturn}{Returns}
-True if it became the singleton instance, false if another \char`\"{}\+App\+Manager\char`\"{} set up as the singleton instance already exists.
+True if it became the singleton instance, false if another \mbox{\hyperlink{classThoughts_1_1AppManager}{App\+Manager}} set up as the singleton instance already exists.
 \end{DoxyReturn}
 
 
 Definition at line 47 of file App\+Manager.\+cs.
 
-Here is the caller graph for this function\+:\nopagebreak
+Here is the caller graph for this function\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -117,7 +119,8 @@ Triggers the start of a new game.
 
 Definition at line 38 of file App\+Manager.\+cs.
 
-Here is the call graph for this function\+:\nopagebreak
+Here is the call graph for this function\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -132,20 +135,22 @@ Here is the call graph for this function\+:\nopagebreak
 
 
 
-Starts a new game by instantiating the Game\+Manager prefab and triggering its method \char`\"{}\+Start\+New\+Game\char`\"{} 
+Starts a new game by instantiating the Game\+Manager prefab and triggering its method Start\+New\+Game. 
 
 
 
 Definition at line 63 of file App\+Manager.\+cs.
 
-Here is the call graph for this function\+:\nopagebreak
+Here is the call graph for this function\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{classThoughts_1_1AppManager_aa6b4098e23afcb973848216e995e00ae_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:\nopagebreak
+Here is the caller graph for this function\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
